--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -9,5 +9,22 @@
 <body>
   <h1>Easiest Mac-N-Cheese Ever!</h1>
   <img src="https://www.allrecipes.com/thmb/9BwXueaJuPeIOtMioK8mLcl0DZk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/807368-53f2c77bd751491c8fe9947c8f032106.jpg" alt="a bowl of Mac-N-Cheese">
+
+  <h3>Description</h3>
+  <p>I have tried many more-complicated recipes for macaroni and cheese. Not only is this one often requested for family functions, but it is easy to make! Kids LOVE this recipe. It is so handy for busy moms.</p>
+
+  <h3>Ingredients</h3>
+  <ul>
+    <li>4 ounces elbow macaroni</li>
+    <li>4 ounces cubed processed cheese food</li>
+    <li>2 fluid ounces milk</li>
+    <li>¼ teaspoon ground black pepper</li>
+  </ul>
+
+  <h3>Steps</h3>
+  <ol>
+    <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook until al dente, 8 to 10 minutes; drain. </li>
+    <li>Place a saucepan over medium-low heat. Combine the cheese food, milk, and pepper in the saucepan; cook until the cheese has melted, stirring frequently. Stir in the drained macaroni until evenly coated. </li>
+  </ol>
 </body>
 </html>
