Change mac-n-cheese img size; link m-n-c page to index page

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Easiest Mac-N-Cheese Ever!</h1>
-  <img src="https://www.allrecipes.com/thmb/9BwXueaJuPeIOtMioK8mLcl0DZk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/807368-53f2c77bd751491c8fe9947c8f032106.jpg" alt="a bowl of Mac-N-Cheese">
+  <img src="https://www.allrecipes.com/thmb/9BwXueaJuPeIOtMioK8mLcl0DZk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/807368-53f2c77bd751491c8fe9947c8f032106.jpg" width="400px" height="400px" alt="a bowl of Mac-N-Cheese">
 
   <h3>Description</h3>
   <p>I have tried many more-complicated recipes for macaroni and cheese. Not only is this one often requested for family functions, but it is easy to make! Kids LOVE this recipe. It is so handy for busy moms.</p>
