--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-
-  <a href="recipes/spaghetti.html">Spaghetti alla Carbonara</a>
+  <ul>
+    <li><a href="recipes/spaghetti.html">Spaghetti alla Carbonara</a></li>
+    <li><a href="recipes/mac-n-cheese.html">Mac-N-Cheese</a></li>
+  </ul>
 </body>
 </html>
