--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ul>
     <li><a href="recipes/spaghetti.html">Spaghetti alla Carbonara</a></li>
     <li><a href="recipes/mac-n-cheese.html">Mac-N-Cheese</a></li>
+    <li><a href="recipes/grilled-pizza.html">Grilled Pizza</a></li>
   </ul>
 </body>
 </html>
